Finished css for now

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@ title: Elisa's Duo Polski - Home
 ---
 
 <div class="blurb">
-
-    <h1 style="width:100%;text-align:center;display:block;">Język Polski</h1>
-    <h1 style="width:100%;text-align:center;display:block;">Polish Language</h1>
+    <div class="header-bar">
+        <h1 style="width:100%;text-align:center;display:block;">Język Polski</h1>
+        <h1 style="width:100%;text-align:center;display:block;">Polish Language</h1>
+    </div>
     
     <div class="emphasis2">
         <h3> Elisa's Duolingo Polish course notes</h3>
