Pushing a temp version to work locally with Jekyll so it's not awkward

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@ title: Elisa's Duo Polski - Home
 
 <div class="blurb">
     <div class="header-bar">
-        <h1 style="width:100%;text-align:center;display:block;">Język Polski</h1>
-        <h1 style="width:100%;text-align:center;display:block;">Polish Language</h1>
+        <h1 style="width:100%;text-align:center;display:block;">Elisa's Duo Polski Notes</h1>
+        <!-- <h1 style="width:100%;text-align:center;display:block;">Język Polski</h1>
+        <h1 style="width:100%;text-align:center;display:block;">Polish Language</h1> -->
     </div>
     
     <div class="emphasis2">
@@ -17,9 +18,12 @@ title: Elisa's Duo Polski - Home
 
         <p>Navigation ( you can also click the menu on the top left )</p>
         <ul>
-            <a href="/basics"><li>Basics</li></a>
+            <!-- <a href="/basics"><li>Basics</li></a>
             <a href="/checkpoint_1"><li>Checkpoint 1</li></a>
-            <a href="/checkpoint_2"><li>Checkpoint 2</li></a>
+            <a href="/checkpoint_2"><li>Checkpoint 2</li></a> -->
+            <li>Basics (under construction)</li>
+            <li>Checkpoint 1 (under construction)</li>
+            <li>Checkpoint 2 (under construction)</li>
             <li> Coming Soon!</li>
         </ul>
     </div>
