--- a/index.html
+++ b/index.html
@@ -16,28 +16,30 @@ title: Elisa's Duo Polski - Home
         
         <p>I am making this Polish learning guide maintaining the helpful and intuitive lesson order of the Duolingo Polish courses, although adding from other guides online, dictionaries and asking around on the forums. Duolingo is great for learning through repetition, but for the most part the grammar is not explained explicitly. So I decided to put all my notes in here.</p>
 
-        <p>Navigation ( you can also click the menu on the top left )</p>
-        <ul>
-            <!-- <a href="/basics"><li>Basics</li></a>
-            <a href="/checkpoint_1"><li>Checkpoint 1</li></a>
-            <a href="/checkpoint_2"><li>Checkpoint 2</li></a> -->
-            <li>Basics (under construction)</li>
-            <li>Checkpoint 1 (under construction)</li>
-            <li>Checkpoint 2 (under construction)</li>
-            <li> Coming Soon!</li>
-        </ul>
+        <p>Navigation (you can also click the menu on the top left)</p>
+        <div class="nav-buttons">
+            <ul>
+                <!-- <a href="/basics"><li>Basics</li></a>
+                <a href="/checkpoint_1"><li>Checkpoint 1</li></a>
+                <a href="/checkpoint_2"><li>Checkpoint 2</li></a> -->
+                <a href="/basics"><li>Basics<br>(under construction)</li></a>
+                <a href="/checkpoint_1"><li>Checkpoint 1<br>(under construction)</li></a>
+                <a href="/checkpoint_2"><li>Checkpoint 2<br>(under construction)</li></a>
+                <li> Coming Soon!</li>
+            </ul>
+        </div>
     </div>
 
     <div class="regular">
         <div style="display:inline">
         <img id="about_img" src="/assets/about_selfies/20200827_075114_Sado_wind.jpg" alt="Elisa">
         </div>
-        <p>I myself am a beginner in Polish, and I decided to start learning to connect a bit more with my girlfriend using Duolingo, which is great for learning through repetition. However for the most part the grammar is not explained explicitly, unless I went into the comments. I noticed myself going back to the same exercises again and again, so I started looking in the comments, searching for the grammar cases that they mention, looking for other support material and taking notes in a Google Docs. Eventually I made it into a website. It’s been an incredible jump from repetition in Duolingo to actually understanding why I’m saying what I’m saying, so I thought it could help other people as well.</p>
+        <p>I myself am a beginner in Polish, and I decided to start learning to connect a bit more with my girlfriend using Duolingo, which is great for learning through repetition. However for the most part the grammar is not explained explicitly, unless I went into the comments. I noticed myself going back to the same exercises again and again, so I started looking in the comments, searching for the grammar cases that they mention, looking for other support material and taking notes in a <a href="https://docs.google.com/document/d/1-WEGni3sqwCeM5EgDXjLDKuamhUgZ2ePhFU48XKqFiM">Google Docs</a>. Eventually I made it into a website. It’s been an incredible jump from repetition in Duolingo to actually understanding why I’m saying what I’m saying, so I thought it could help other people as well.</p>
     </div>
 
     <div class="emphasis-gray">
         <h3> Resources </h3>
-        <p>First let's study the phonology of the Polish language so that we can read the texts in Polish! Duolingo text to speech software is not perfect, so we should practice.</p>
+        <p>First let's study <a href="https://en.m.wikipedia.org/wiki/Polish_phonology">the phonology of the Polish language</a> so that we can read the texts in Polish!</p>
 
         <p>I used the help of the <a href="https://apps.apple.com/cn/app/polish-dictionary-thesaurus-english-translation/id1028404454?l=en">iOS app Polish Dictionary & Thesaurus by Farlex, Inc.</a>, or <a href="https://play.google.com/store/apps/details?id=com.farlex.dictionary.polish&hl=en_US">the GooglePlay version</a>, which are powered by <a href="http://pl.thefreedictionary.com/">The Free Dictionary by Farlex</a>. However, for some reason the website version is incomplete and doesn’t have the conjugation of verbs and declension of words is not included. For a desktop or laptop, I recommend using <a href="https://pl.wiktionary.org/">the polish Wiktionary</a>.</p>
 
