start off menus (don't push yet)

--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@ title: Elisa's Duo Polski - Home
 
         <p>Navigation (you can also click the menu on the top left)</p>
         <div class="nav-buttons">
-            <ul>
-                <!-- <a href="/basics"><li>Basics</li></a>
-                <a href="/checkpoint_1"><li>Checkpoint 1</li></a>
-                <a href="/checkpoint_2"><li>Checkpoint 2</li></a> -->
-                <a href="/basics"><li>Basics<br>(under construction)</li></a>
-                <a href="/checkpoint_1"><li>Checkpoint 1<br>(under construction)</li></a>
-                <a href="/checkpoint_2"><li>Checkpoint 2<br>(under construction)</li></a>
-                <li> Coming Soon!</li>
-            </ul>
+            <div class="nav-btn"><a href="/lessons">All Lessons<br>(under construction)</a></div>
+        </div>
+        <div class="nav-buttons">
+            <div class="nav-btn"><a href="/lessons/basics">Basics<br>(under construction)</a></div>
+            <div class="nav-btn"><a href="/lessons/checkpoint_1">Checkpoint 1<br>(under construction)</a></div>
+            <div class="nav-btn"><a href="/lessons/checkpoint_2">Checkpoint 2<br>(under construction)</a></div>
+        </div>
+        <div class="nav-buttons">
+            <div class="nav-btn-off"><a><br>Coming Soon!<br></a></div>
         </div>
     </div>
 
