Submenus in hamburguer finished

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@ title: Elisa's Duo Polski - Home
             <div class="nav-btn"><a href="/lessons">All Lessons<br>(under construction)</a></div>
         </div>
         <div class="nav-buttons">
-            <div class="nav-btn"><a href="/lessons/basics">Basics<br>(under construction)</a></div>
-            <div class="nav-btn"><a href="/lessons/checkpoint_1">Checkpoint 1<br>(under construction)</a></div>
-            <div class="nav-btn"><a href="/lessons/checkpoint_2">Checkpoint 2<br>(under construction)</a></div>
+            <div class="nav-btn"><a href="/lessons#basics">Basics<br>(under construction)</a></div>
+            <div class="nav-btn"><a href="/lessons#checkpoint_1">Checkpoint 1<br>(under construction)</a></div>
+            <div class="nav-btn"><a href="/lessons#checkpoint_2">Checkpoint 2<br>(under construction)</a></div>
         </div>
         <div class="nav-buttons">
             <div class="nav-btn-off"><a><br>Coming Soon!<br></a></div>
@@ -47,12 +47,8 @@ title: Elisa's Duo Polski - Home
 
         <p>Throughout the guide, I also use a few pointers back to the website <a href="https://mowicpopolsku.com/">Mówić po Polsku</a>, <a href="https://www.clozemaster.com/blog/topics/language-learning/learn-polish/">Clozemaster</a>, <a href="https://courseofpolish.com/grammar">Course of Polish</a> and perhaps a few books, such as <a href="https://www.amazon.com/dp/B007M93XSS">“Polish: A Comprehensive Grammar” by Iwona Sadowska</a>, or <a href="https://www.amazon.com/dp/0071597468/">“Polish Verbs & Essentials of Grammar” by Oscar Swan</a>.</p>
 
-        <p>I’ve also been listening to music in Polish on Spotify, making use of the occasional included lyrics. Here are two playlists I’ve made.</p>
-
-        <ul>
-            <li><a href="https://open.spotify.com/playlist/2mQ5n4tVnwoo7K71YjSFRz?si=Bt5dUMQHRteIMfhgIdZdSg"> Music in Polish</a></li>
-            <li><a href="https://open.spotify.com/playlist/09s2r2vimAdjv0XqpUIpEa?si=ftvxuuU0SOmkRJNWfjWdlw"> Polish practice and faves</a></li>
-        </ul>
+        <p>I’ve also been listening to music in Polish on Spotify, making use of the occasional included lyrics. Here are two playlists I’ve made, along with other resources.</p>
+        
         <div class="columns">
             <div class="column">
                 <span class="column-title">Learning Websites</span>
