First lesson up and 404

--- a/lessons/index.html
+++ b/lessons/index.html
@@ -87,7 +87,19 @@ title: Elisa's Duo Polski - Lessons
     
     <div class="nav-buttons">
         <div class="nav-btn"><a href="/lessons/checkpoint_2/17_colors.html">Colors<br>Kolory</a></div>
-        <div class="nav-btn"><a href="/lessons/checkpoint_2/17_5_extra_1.html">Extra Vocabulary from songs<br>(you can skip)</a></div>
+    </div>
+    <div class="nav-buttons">
+        <div class="nav-btn-off">
+            ・
+        </div>
+    </div>
+    <div class="nav-buttons">
+        <div class="nav-btn-extra"><a href="/lessons/checkpoint_2/17_5_extra_1.html">Extra Vocabulary from songs<br>(you can skip)</a></div>
+    </div>
+    <div class="nav-buttons">
+        <div class="nav-btn-off">
+            ・
+        </div>
     </div>
     <div class="nav-buttons">
         <div class="nav-btn"><a href="/lessons/checkpoint_2/18_questions.html">Questions<br>Pytania</a></div>
