Finished basics, next is checkpoint 1

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ title: Elisa's Duo Polski - Home
             <div class="nav-btn"><a href="/lessons">All Lessons<br>(under construction)</a></div>
         </div>
         <div class="nav-buttons">
-            <div class="nav-btn"><a href="/lessons#basics">Basics<br>(under construction)</a></div>
+            <div class="nav-btn"><a href="/lessons#basics">Basics</a></div>
             <div class="nav-btn"><a href="/lessons#checkpoint_1">Checkpoint 1<br>(under construction)</a></div>
             <div class="nav-btn"><a href="/lessons#checkpoint_2">Checkpoint 2<br>(under construction)</a></div>
         </div>
