--- a/lessons/basics/01_basics_1.html
+++ b/lessons/basics/01_basics_1.html
@@ -12,7 +12,7 @@ title: Elisa's Duo Polski - Polish basics 1
     </div>
 
     <div class="nav-buttons">
-        <div class="nav-btn"><a href="/lessons/">All lessons</a></div>
+        <div class="nav-btn"><a href="/lessons#basics">Lessons: Basics</a></div>
         <div class="nav-btn"><a href="/lessons/basics/02_basics_2.html">Basics 2</a></div>
     </div>
     
@@ -142,13 +142,13 @@ title: Elisa's Duo Polski - Polish basics 1
         <p>Now let’s revise the lessons vocabulary:</p>
 
         <table class="mini-table">
-            <thead>
+            <!-- <thead>
               <tr>
                 <th></th>
                 <th>In Polish<br>Po polsku</th>
                 <th>In English<br>Po angielsku</th>
               </tr>
-            </thead>
+            </thead> -->
             <tbody>
                 <tr><td>♂</td> <td>Mężczyzna    </td> <td>Man                       </td></tr>
                 <tr><td>♀</td> <td>Kobieta      </td> <td>Woman                     </td></tr>
@@ -324,7 +324,7 @@ title: Elisa's Duo Polski - Polish basics 1
     </div>
 
     <div class="nav-buttons">
-        <div class="nav-btn"><a href="/lessons/">All lessons</a></div>
+        <div class="nav-btn"><a href="/lessons#basics">Basics</a></div>
         <div class="nav-btn"><a href="/lessons/basics/02_basics_2.html">Basics 2</a></div>
     </div>
 
