--- a/lessons/basics/02_basics_2.html
+++ b/lessons/basics/02_basics_2.html
@@ -13,6 +13,7 @@ title: Elisa's Duo Polski - Polish basics 2
     
     <div class="nav-buttons">
         <div class="nav-btn"><a href="/lessons/basics/01_basics_1.html">Basics 1</a></div>
+        <div class="nav-btn"><a href="/lessons#basics">Lessons: Basics</a></div>
         <div class="nav-btn"><a href="/lessons/basics/03_phrases.html">Phrases</a></div>
     </div>
 
@@ -105,26 +106,17 @@ title: Elisa's Duo Polski - Polish basics 2
         <p>*<span class="violet-text">One</span> means <b>they</b> (neuter), but it is barely used at all. Most sentences in neuter gender would be using <span class="violet-text">To</span> (this/these)</p>
 
     </div>
-    <div class="emphasis-gray">
+    <div class="regular">
 
         <h3>  Nouns - Rzeczowniki </h3>
 
         <h4> Singular - Liczba Pojedyncza </h4>
 
         <table class="mini-table">
-            <thead>
-              <tr>
-                <th></th>
-                <th>In Polish<br>Po polsku</th>
-                <th>In English<br>Po angielsku</th>
-              </tr>
-            </thead>
-            <tbody>
-                <tr><td>⚲</td> <td>Dziecko      </td> <td>Child                             </td></tr>
-                <tr><td>♂</td> <td>Chłopak      </td> <td>Boy (teenage boy, boyfriend)      </td></tr>
-                <tr><td>♀</td> <td>Dziewczyna   </td> <td>Girl (teenage girl, girlfriend)   </td></tr>
-                <tr><td>⚲</td> <td>Ciasteczko   </td> <td>Cookie *                          </td></tr>
-            </tbody>
+            <tr><td>⚲</td> <td>Dziecko      </td> <td>Child                             </td></tr>
+            <tr><td>♂</td> <td>Chłopak      </td> <td>Boy (teenage boy, boyfriend)      </td></tr>
+            <tr><td>♀</td> <td>Dziewczyna   </td> <td>Girl (teenage girl, girlfriend)   </td></tr>
+            <tr><td>⚲</td> <td>Ciasteczko   </td> <td>Cookie *                          </td></tr>
         </table>
 
         <h4> Plural - Liczba Mnoga </h4>
@@ -132,19 +124,10 @@ title: Elisa's Duo Polski - Polish basics 2
         <p>From now on pl. will be the abbreviation for plural.</p>
 
         <table class="mini-table">
-            <thead>
-              <tr>
-                <th></th>
-                <th>In Polish<br>Po polsku</th>
-                <th>In English<br>Po angielsku</th>
-              </tr>
-            </thead>
-            <tbody>
-                <tr><td>pl. ⚲</td> <td>Dziecko          </td> <td>Child                </td></tr>
-                <tr><td>pl. ♀</td> <td>Dziewczynki      </td> <td>Girls (little girls) </td></tr>
-                <tr><td>pl. ♂</td> <td>Chłopcy          </td> <td>Boys (little boys)   </td></tr>
-                <tr><td>pl. ⚲</td> <td>Ciasteczka       </td> <td>Cookies *            </td></tr>
-            </tbody>
+            <tr><td>pl. ⚲</td> <td>Dziecko          </td> <td>Child                </td></tr>
+            <tr><td>pl. ♀</td> <td>Dziewczynki      </td> <td>Girls (little girls) </td></tr>
+            <tr><td>pl. ♂</td> <td>Chłopcy          </td> <td>Boys (little boys)   </td></tr>
+            <tr><td>pl. ⚲</td> <td>Ciasteczka       </td> <td>Cookies *            </td></tr>
         </table>
 
     </div>
@@ -216,7 +199,7 @@ title: Elisa's Duo Polski - Polish basics 2
         <b><span class="violet-text">Czy</span></b> means <b>whether</b>, <b>or</b>, or <b>if</b>. It can be used to start questions for other verbs.</p>
 
     </div>
-    <div class="emphasis-gray">
+    <div class="regular">
 
         <h3> Grammatical cases - Odmiana przypadek </h3>
 
@@ -254,6 +237,7 @@ title: Elisa's Duo Polski - Polish basics 2
 
     <div class="nav-buttons">
         <div class="nav-btn"><a href="/lessons/basics/01_basics_1.html">Basics 1</a></div>
+        <div class="nav-btn"><a href="/lessons#basics">Lessons: Basics</a></div>
         <div class="nav-btn"><a href="/lessons/basics/03_phrases.html">Phrases</a></div>
     </div>
     
