--- a/lessons/basics/03_phrases.html
+++ b/lessons/basics/03_phrases.html
@@ -13,6 +13,7 @@ title: Elisa's Duo Polski - Basic Phrases
 
     <div class="nav-buttons">
         <div class="nav-btn"><a href="/lessons/basics/02_basics_2.html">Basics 2</a></div>
+        <div class="nav-btn"><a href="/lessons#basics">Lessons: Basics</a></div>
         <div class="nav-btn"><a href="/lessons/basics/04_animals_1.html">Animals 1</a></div>
     </div>
     
@@ -115,25 +116,39 @@ title: Elisa's Duo Polski - Basic Phrases
 
         <p><span class="violet-text">Po</span> means <b>on</b>, <b>according</b> <b>to</b>, <b>via</b>, <b>by</b>, <b>at</b>, etc. In this case it translates to "<b>in [language]</b>", but it really means something more like "I speak in the [country] style/way. 
 
-        The noun (language) will drop its <span class="blue-text">i</span> and change into <span class="red-text">u</span> in an archaic Dative form that is used for this case.
+        The noun (language) will drop its <span class="blue-text">i</span> and change into <span class="red-text">u</span> in an archaic Dative form that is used for this case.</p>
 
-        Polsk<span class="blue-text">i</span>: Ja mówię po polsk<span class="red-text">u</span> - I speak (in) Polish
-        Angielsk<span class="blue-text">i</span>: Ja mówię po angielsk<span class="red-text">u</span> - I speak (in) English
-        Hiszpańsk<span class="blue-text">i</span>: Ja mówię po hiszpańsk<span class="red-text">u</span> - I speak (in) Spanish
-        Japońsk<span class="blue-text">i</span>: Ja mówię po japońsk<span class="red-text">u</span> - I speak (in) Japanese
-        </p>
+        <table class="mini-table">
+            <tr><td>Polsk<span class="blue-text">i</span></td>
+                <td>Ja mówię po polsk<span class="red-text">u</span></td>
+                <td>I speak (in) Polish</td>
+            </tr>
+            <tr><td>Angielsk<span class="blue-text">i</span></td>
+                <td>Ja mówię po angielsk<span class="red-text">u</span></td>
+                <td>I speak (in) English</td>
+            </tr>
+            <tr><td>Hiszpańsk<span class="blue-text">i</span></td>
+                <td>Ja mówię po hiszpańsk<span class="red-text">u</span></td>
+                <td>I speak (in) Spanish</td>
+            </tr>
+            <tr><td>Japońsk<span class="blue-text">i</span></td>
+                <td>Ja mówię po japońsk<span class="red-text">u</span></td>
+                <td>I speak (in) Japanese</td>
+            </tr>
+        </table>
 
         <h3> They say [phrase] - One mówią [zwroty] </h3>
 
-        <p>We can just append the phrase to 'They say', 'She says', etc, to relay a message.
-
-        Ona mówi dobranoc - She says goodnight
-        One mówią cześć - They say hello
-        </p>
+        <p>We can just append the phrase to 'They say', 'She says', etc, to relay a message.</p>
+        <table class="mini-table">
+            <tr><td>Ona mówi dobranoc</td><td>She says goodnight</td></tr>
+            <tr><td>One mówią cześć</td><td>They say hello</td></tr>
+        </table>
     </div>
     
     <div class="nav-buttons">
         <div class="nav-btn"><a href="/lessons/basics/02_basics_2.html">Basics 2</a></div>
+        <div class="nav-btn"><a href="/lessons#basics">Lessons: Basics</a></div>
         <div class="nav-btn"><a href="/lessons/basics/04_animals_1.html">Animals 1</a></div>
     </div>
 
