--- a/lessons/basics/04_animals_1.html
+++ b/lessons/basics/04_animals_1.html
@@ -13,6 +13,7 @@ title: Elisa's Duo Polski - Animals 1
 
     <div class="nav-buttons">
         <div class="nav-btn"><a href="/lessons/basics/03_phrases.html">Phrases</a></div>
+        <div class="nav-btn"><a href="/lessons#basics">Lessons: Basics</a></div>
         <div class="nav-btn"><a href="/lessons/basics/05_food_1.html">Food 1</a></div>
     </div>
     
@@ -68,33 +69,30 @@ title: Elisa's Duo Polski - Animals 1
         <p> Neuter nouns - Rzeczowniki nijakie </p>
 
         <table class="mini-table">
-            <thead>
-              <tr>
-                <th></th>
-                <th>In Polish<br>Po polsku</th>
-                <th>In English<br>Po angielsku</th>
-              </tr>
-            </thead>
             <tbody>
                 <tr><td>⚲</td> <td>Zwierzę</td> <td>Animal *</td></tr>
             </tbody>
         </table>
 
-        <p>* Technically it’s in the Defining lesson, but let’s see it here as well
+        <p>* Technically it’s in the Defining lesson, but let’s see it here as well</p>
 
         <span class="section">Examples - Przykłady: </span>
 
-        Pies i kot - A dog and a cat
-        Ptak je chleb - The bird is eating bread
-        Lew i tygrys - A lion and a tiger
-        Krab je ciasteczka - The crab is eating cookies
-        Kot pije wodę - The cat is drinking water
-        </p>
+        <table class="mini-table">
+            <tbody>
+                <tr><td>Pies i kot</td> <td> A dog and a cat</td></tr>
+                <tr><td>Ptak je chleb</td> <td> The bird is eating bread</td></tr>
+                <tr><td>Lew i tygrys</td> <td> A lion and a tiger</td></tr>
+                <tr><td>Krab je ciasteczka</td> <td> The crab is eating cookies</td></tr>
+                <tr><td>Kot pije wodę</td> <td> The cat is drinking water</td></tr>
+            </tbody>
+        </table>
 
     </div>
 
     <div class="nav-buttons">
         <div class="nav-btn"><a href="/lessons/basics/03_phrases.html">Phrases</a></div>
+        <div class="nav-btn"><a href="/lessons#basics">Lessons: Basics</a></div>
         <div class="nav-btn"><a href="/lessons/basics/05_food_1.html">Food 1</a></div>
     </div>
     
