--- a/lessons/basics/05_food_1.html
+++ b/lessons/basics/05_food_1.html
@@ -13,6 +13,7 @@ title: Elisa's Duo Polski - Food 1
 
     <div class="nav-buttons">
         <div class="nav-btn"><a href="/lessons/basics/04_animals_1.html">Animals 1</a></div>
+        <div class="nav-btn"><a href="/lessons#basics">Lessons: Basics</a></div>
         <div class="nav-btn"><a href="/lessons/basics/06_defining.html">Defining</a></div>
     </div>
     
@@ -104,20 +105,50 @@ title: Elisa's Duo Polski - Food 1
 
         <h2> Grammar practice - Ćwiczenia gramatyczne </h2>
 
-        <p>Plain Adjectives:
-        Smaczna kanapka - Tasty sandwich.
-        Smaczny sok - Tasty juice
-        Smaczne wino - Tasty wine
+        <span class="section"> Plain Adjectives:</span>
+        <table class="mini-table">
+            <tbody>
+                <tr><td>Smaczna kanapka</td>
+                    <td>Tasty sandwich.</td>
+                </tr>
+                <tr><td>Smaczny sok</td>
+                    <td>Tasty juice</td>
+                </tr>
+                <tr><td>Smaczne wino</td>
+                    <td>Tasty wine</td>
+                </tr>
+            </tbody>
+        </table>
 
-        Nominative (Być):
-        Zupa jest smaczna - The soup is tasty.
-        Śniadanie jest smaczne - Breakfast is tasty.
+        <span class="section"> Nominative (Być):</span>
+        <table class="mini-table">
+            <tbody>
+                <tr><td>Zupa jest smaczna</td>
+                    <td>The soup is tasty.</td>
+                </tr>
+                <tr><td>Śniadanie jest smaczne</td>
+                    <td>Breakfast is tasty.</td>
+                </tr>
+            </tbody>
+        </table>
 
-        Accusative (Biernik):
-        Jem śniadanie i kolacj<span class="red-text">ę</span> - I eat breakfast and dinner.
-        Jem obiad - I am eating lunch.
-        Jecie posiłek - You (plural) are eating a meal.
-        Mężczyzna ma pomidor<span class="red-text">a *</span> - The man has a tomato 
+        <span class="section"> Accusative (Biernik):</span>
+        <table class="mini-table">
+            <tbody>
+                <tr><td>Jem śniadanie i kolacj<span class="red-text">ę</span></td>
+                    <td>I eat breakfast and dinner.</td>
+                </tr>
+                <tr><td>Jem obiad</td>
+                    <td>I am eating lunch.</td>
+                </tr>
+                <tr><td>Jecie posiłek</td>
+                    <td>You (plural) are eating a meal.</td>
+                </tr>
+                <tr><td>Mężczyzna ma pomidor<span class="red-text">a *</span></td>
+                    <td>The man has a tomato</td>
+                </tr>
+            </tbody>
+        </table>
 
         * The accusative (<span class="violet-text">biernik</span>) of <span class="violet-text">pomidor</span> would be just <span class="blue-text">pomidor</span> according to the rules, but as an exception to the rule, its declension is <span class="red-text">pomidora</span>.
         There are many exceptions, a list of some is here: 
@@ -128,6 +159,7 @@ title: Elisa's Duo Polski - Food 1
 
     <div class="nav-buttons">
         <div class="nav-btn"><a href="/lessons/basics/04_animals_1.html">Animals 1</a></div>
+        <div class="nav-btn"><a href="/lessons#basics">Lessons: Basics</a></div>
         <div class="nav-btn"><a href="/lessons/basics/06_defining.html">Defining</a></div>
     </div>
 
