Add blog and updates section

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@ title: Elisa's Duo Polski - Home
         <p>I am making this Polish learning guide maintaining the helpful and intuitive lesson order of the Duolingo Polish courses, although adding from other guides online, dictionaries and asking around on the forums. Duolingo is great for learning through repetition, but for the most part the grammar is not explained explicitly. So I decided to put all my notes in here.</p>
 
         <p>Navigation (you can also click the menu on the top left)</p>
+    
+        <div class="nav-buttons">
+            <div class="nav-btn"><a href="/blog">Blog and Updates</a></div>
+        </div>
         <div class="nav-buttons">
             <div class="nav-btn"><a href="/lessons">All Lessons<br>(under construction)</a></div>
         </div>
